syntax = "proto3";

package master;

option go_package = "./w_pb";


// 定义请求信息
message TaskRequest{
    //流请求参数
    repeated string data = 1;
    string requestId = 2;
    string Ip = 3;
}

// 定义响应的信息
message TaskResponse {
    //响应码
    int32 code = 1;
    //响应值
    string message = 2;
}

service Task {
    rpc DistributeTask(TaskRequest) returns(TaskResponse){};
}
